--- a/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
@@ -29,45 +29,10 @@
     </UserControl.Resources>
 
     <StackPanel Orientation="Vertical">
-        <TextBlock
-            x:Name="DateBlock"
-            Padding="10,5"
-            HorizontalAlignment="Left"
-            d:Text="Thu 4 pm"
-            FontSize="14"
-            FontWeight="Medium"
-            MaxLines="1"
-            OpticalMarginAlignment="TrimSideBearings"
-            Text="{Binding Date, Mode=OneWay}" />
-        <Border Style="{ThemeResource Divider}" Visibility="Collapsed" />
-        <local:IconControl
-            Height="50"
-            Margin="5"
-            HorizontalAlignment="Left"
-            d:WeatherIcon="&#xf00d;"
-            WeatherIcon="{x:Bind ViewModel.Icon, Mode=OneWay}" />
-        <TextBlock
-            Padding="10,0"
-            d:Text="36°"
-            FontSize="24"
-            FontWeight="SemiLight"
-            MaxLines="1"
-            OpticalMarginAlignment="TrimSideBearings"
-            Text="{Binding Temperature, Mode=OneWay}" />
-        <TextBlock
-            x:Name="ConditionBlock"
-            MinHeight="52"
-            Padding="10,5"
-            d:Text="Sunny&#x000A;With a Chance"
-            FontSize="14"
-            MaxLines="2"
-            OpticalMarginAlignment="TrimSideBearings"
-            Text="{Binding Condition, Mode=OneWay}"
-            TextTrimming="CharacterEllipsis" />
         <Grid
             MinHeight="20"
             Padding="5"
-            HorizontalAlignment="Left">
+            HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="*" />
@@ -91,10 +56,47 @@
                 Text="{Binding PoPChance, Mode=OneWay}"
                 Visibility="{Binding PoPChance, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}" />
         </Grid>
+        <TextBlock
+            x:Name="DateBlock"
+            Padding="10,5"
+            HorizontalAlignment="Center"
+            d:Text="Thu 4 pm"
+            FontSize="14"
+            FontWeight="Medium"
+            MaxLines="1"
+            OpticalMarginAlignment="TrimSideBearings"
+            Text="{Binding Date, Mode=OneWay}" />
+        <Border Style="{ThemeResource Divider}" Visibility="Collapsed" />
+        <local:IconControl
+            Height="50"
+            Margin="5"
+            HorizontalAlignment="Center"
+            d:WeatherIcon="&#xf00d;"
+            WeatherIcon="{x:Bind ViewModel.Icon, Mode=OneWay}" />
+        <TextBlock
+            Padding="10,0"
+            HorizontalAlignment="Center"
+            d:Text="36°"
+            FontSize="24"
+            FontWeight="SemiLight"
+            MaxLines="1"
+            OpticalMarginAlignment="TrimSideBearings"
+            Text="{Binding Temperature, Mode=OneWay}" />
+        <TextBlock
+            x:Name="ConditionBlock"
+            MinHeight="52"
+            Padding="10,5"
+            HorizontalAlignment="Center"
+            d:Text="Sunny&#x000A;With a Chance"
+            FontSize="14"
+            MaxLines="2"
+            OpticalMarginAlignment="TrimSideBearings"
+            Text="{Binding Condition, Mode=OneWay}"
+            TextTrimming="CharacterEllipsis" />
         <Grid
             MinHeight="20"
             Padding="5"
-            HorizontalAlignment="Left">
+            HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="*" />
