--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:databinding="using:SimpleWeather.UWP.DataBinding"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -99,7 +100,7 @@
                 d:Visibility="Visible"
                 ShowAsMonochrome="True"
                 UriSource="/Assets/outline_near_me_black_24dp.png"
-                Visibility="Collapsed" />
+                Visibility="{x:Bind databinding:WeatherNowBinding.ShowGPSIcon(ViewModel.LocationType), Mode=OneWay}" />
             <toolkitControls:DropShadowPanel
                 BlurRadius="15.0"
                 ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}"
@@ -120,7 +121,8 @@
             Margin="5,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
-            Orientation="Vertical">
+            Orientation="Vertical"
+            Visibility="{x:Bind ViewModel.IsWeatherValid, Mode=OneWay}">
             <toolkitControls:DropShadowPanel
                 VerticalAlignment="Center"
                 BlurRadius="15.0"
@@ -156,7 +158,7 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
             Orientation="Vertical">
-            <Grid HorizontalAlignment="Right" Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind helpers:BindingExtensions.IsVisible(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -182,7 +184,7 @@
                     ShowAsMonochrome="True"
                     WeatherIcon="&#xf058;" />
             </Grid>
-            <Grid HorizontalAlignment="Right" Visibility="{x:Bind ViewModel.LoTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind helpers:BindingExtensions.IsVisible(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -214,7 +216,8 @@
             Grid.Column="2"
             Margin="10,0"
             HorizontalAlignment="Center"
-            VerticalAlignment="Center">
+            VerticalAlignment="Center"
+            Visibility="{x:Bind ViewModel.IsWeatherValid, Mode=OneWay}">
             <StackPanel
                 Grid.Column="1"
                 HorizontalAlignment="Left"
@@ -275,6 +278,15 @@
                 </toolkitControls:DropShadowPanel>
             </StackPanel>
         </StackPanel>
+        <TextBlock
+            Grid.Row="1"
+            Grid.ColumnSpan="3"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            d:Text="NO DATA"
+            Style="{ThemeResource TitleTextBlockStyle}"
+            Text="{helpers:StringRes Name='label_nodata'}"
+            Visibility="{x:Bind ViewModel.IsWeatherValid, Converter={StaticResource booleanToVisibilityConverter}, ConverterParameter='True'}" />
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
